# mjcf-parser

./: Cargo.toml  README.md
examples/: parse_bad_xml.rs  parse_empty_model.rs
examples/models/: static_capsule_cube.xml  static_sphere.xml
src/: error.rs  lib.rs  log.rs  mjcf_model.rs
src/attributes/: mod.rs  orientations.rs  real_vector_attribute.rs
src/tags/: geom.rs
src/user_data/: geom.rs  mod.rs
