[package]
name = "mjcf-parser"
version = "0.1.0"
authors = ["Devin Schwab <digidevin@gmail.com>"]
edition = "2018"

[build-dependencies]
built = "0.3"

[dependencies]
crossbeam = "0.7"
lazy_static = "1.3.0"
nalgebra = "0.17"
ncollide3d = "0.18"
nphysics3d = "0.10"
roxmltree = "0.6"
slog = "2"
slog-stdlog = "3"